fixed problem with tab overlapping edge of search box

--- a/trunk/Notewise/root/style.css
+++ b/trunk/Notewise/root/style.css
@@ -1099,7 +1099,7 @@ td.divider {
 }
 
 .tab {
-    margin-left: 300px;
+    margin-left: 320px;
     height: 48px;
     position: relative;
     right: 5px;
